@@ -456,7 +456,8 @@ typedef enum
     TITLEBAR_BUTTON_STD_COLOR         = 0x0080,
     TITLEBAR_BUTTON_COLOR_SYMBOL      = 0x0100,
     TITLEBAR_BUTTON_HOVER_SYMBOL_FULL = 0x0200,
-    TITLEBAR_BUTTON_SUNKEN_BACKGROUND = 0x0400
+    TITLEBAR_BUTTON_SUNKEN_BACKGROUND = 0x0400,
+    TITLEBAR_BUTTOM_ARROW_MIN_MAX     = 0x0800
 } ETitleBarButtonFlags;
 
 typedef enum
