@@ -2108,21 +2108,31 @@
        <item row="9" column="1">
         <widget class="QCheckBox" name="titlebarButtons_sunkenBackground">
          <property name="whatsThis">
-          <string>If enabled, a sunken background is drawn behind the buttons..</string>
+          <string>If enabled, a sunken background is drawn behind the buttons.</string>
          </property>
          <property name="text">
           <string>Sunken background</string>
          </property>
         </widget>
        </item>
-       <item row="10" column="0">
+       <item row="10" column="1">
+        <widget class="QCheckBox" name="titlebarButtons_arrowMinMax">
+         <property name="whatsThis">
+          <string>If enabled, arrows are drawn as the icons for min and max buttons.</string>
+         </property>
+         <property name="text">
+          <string>Use arrows for min/max buttons</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="0">
         <widget class="QLabel" name="label_57">
          <property name="text">
           <string>Custom colors:</string>
          </property>
         </widget>
        </item>
-       <item row="10" column="1">
+       <item row="11" column="1">
         <widget class="QCheckBox" name="titlebarButtons_colorSymbolsOnly">
          <property name="whatsThis">
           <string>If enabled, custom colors will be applied to the symbols, otherwise they will be applied to the button background.</string>
@@ -2132,7 +2142,7 @@
          </property>
         </widget>
        </item>
-       <item row="11" column="1">
+       <item row="12" column="1">
         <widget class="QCheckBox" name="titlebarButtons_colorInactive">
          <property name="whatsThis">
           <string>If enabled, custom colors will be applied to active and inactive windows, otherwise they will only be applied to active windows.</string>
@@ -3741,6 +3751,8 @@
   <tabstop>titlebarButtons_button</tabstop>
   <tabstop>titlebarButtons_custom</tabstop>
   <tabstop>titlebarButtons_colorOnMouseOver</tabstop>
+  <tabstop>titlebarButtons_sunkenBackground</tabstop>
+  <tabstop>titlebarButtons_arrowMinMax</tabstop>
   <tabstop>titlebarButtons_colorSymbolsOnly</tabstop>
   <tabstop>titlebarButtons_colorInactive</tabstop>
   <tabstop>titlebarButtons_colorClose</tabstop>
